[package]
name = "r2r_interactive_markers"
version = "0.0.1"
authors = ["Endre Erős <endre.eros@chalmersindustriteknik.se>"]
edition = "2021"
autotests = true

[profile.colcon]
inherits = "release"

[dependencies]
r2r = { git = "ssh://git@github.com/sequenceplanner/r2r.git", tag = "0.9.6" }
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }